@@ -1,5 +1,13 @@
 2003-10-28  Patrice Dumas  <dumas@centre-cired.fr>
 
+	* texi2html.pl: if not split and there is a leading directory 
+	specified with --out, create that directory.
+	If a directory creation fails, abort.
+	test the writability of the results directory, even when it is
+	the current directory.
+
+2003-10-28  Patrice Dumas  <dumas@centre-cired.fr>
+
 	* doc/: remove unneeded .texi files, now included in texi2html.texi.
 	* Makefile.am, doc/Makefile.am: include info file in distribution.
 
